<resources>
    <string name="app_name">FourTaxis_GraduateApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login Fragment -->
    <string name="login_to_register"><u>Зарегистрироваться</u></string>
    <string name="register_to_login"><u>Войти</u></string>
    <string name="login_dont_have_an_account">Нет аккаунта?</string>
    <string name="login">Войти</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_email">Email</string>

    <!-- Register Fragment -->
    <string name="register_create_an_account_upper_case">Регистрация</string>
    <string name="register_full_name">Имя</string>
    <string name="register_phone_number">Телефон</string>
    <string name="register">Создать</string>
    <string name="register_already_have_an_account">Есть аккаунт?</string>
    <string name="error_input_name">Введите имя</string>
    <string name="error_input_phone">Введите номер телефона</string>
    <string name="error_input_email">Введите почту</string>
    <string name="error_input_password">Введите пароль</string>

    <string name="profile_fullname">Имя</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Телефон</string>
    <string name="profile_bio">О себе</string>
    <string name="change_name_fragment_text">Как вас зовут?</string>
    <string name="change_phone_fragment_text">Подтвердите номер телефона</string>
    <string name="change_bio_fragment_text">Что бы вы хотели рассказать о себе?</string>
    <string name="ride_item_empty">Пусто</string>
    <string name="ride_item_dest_from">A:</string>
    <string name="ride_item_dest_where">B:</string>
    <string name="create_ride_from_text">Откуда будет совершена поездка?</string>
    <string name="create_ride_where_text">Куда вы хотите поехать?</string>
    <string name="create_ride_date_text">Выберите дату поездки</string>
    <string name="create_ride_time_text">Выберите время поездки</string>
    <string name="rides">Поездки</string>
    <string name="my_rides">Мои поездки</string>
    <string name="messages">Сообщения</string>
    <string name="profile">Профиль</string>

    <string-array name="rides_dest">
        <item>Деревня Универсиады</item>
        <item>Пушкина</item>
        <item>Красная позиция</item>
        <item>Кремлевская 35</item>
        <item>Кремлевская 18</item>
        <item>УНИКС</item>
        <item>Бутлерова 4</item>
        <item>Татарстан 2</item>
        <item>Мартына Межлаука 1</item>
    </string-array>
</resources>